fixed not applying overflow x on mobile device

--- a/apps/app/src/App.scss
+++ b/apps/app/src/App.scss
@@ -10,7 +10,12 @@ p {
 }
 
 body {
-  overflow-x:hidden;
+  position: relative;
+  overflow-x: hidden;
+}
+
+html{
+  overflow-x: hidden;
 }
 
 * {
